# precision-recall-gain

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .editorconfig  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: github-actions.yml
build_tools/: linting.sh
ci/: bootstrap.py  requirements.txt
ci/templates/: .appveyor.yml
ci/templates/.github/workflows/: github-actions.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  precision_recall_gain.rst
src/precision_recall_gain/: __init__.py  __main__.py  _classification.py  cli.py  prg.py
tests/: test_classification.py  test_precision_recall_gain.py
